--- a/len-sys/src/main/resources/plugin/x-admin/css/xadmin.css
+++ b/len-sys/src/main/resources/plugin/x-admin/css/xadmin.css
@@ -70,7 +70,7 @@ body{
     height: 50px;
     padding: 0px 16px;
     font-size: 14px;
-    color: #555555;
+    color: #EBEBEB;
     outline:none;
     width:100%;
     box-sizing: border-box;
@@ -79,37 +79,37 @@ body{
 .login input[type=file]:focus,
 .login input[type=password]:focus,
 .login input[type=email]:focus, select:focus {
-    border: 1px solid #27A9E3;
+    border: 1px solid #EBEBEB;
 }
 .login input[type=submit],
 .login input[type=button]{
     display: inline-block;
     vertical-align: middle;
     padding: 12px 24px;
-    margin: 0px;
+    margin-top: 35px;
     font-size: 18px;
     line-height: 24px;
     text-align: center;
     white-space: nowrap;
     vertical-align: middle;
     cursor: pointer;
-    color: #ffffff;
-    background-color: #189F92;
+    color: #008B8B;
+    background-color: #EBEBEB;
     border-radius: 3px;
     border: none;
     -webkit-appearance: none;
     outline:none;
-    width:100%;
+    width:80%;
 }
 .login hr {
 	background: #fff url() 0 0 no-repeat;
 }
 .login hr.hr15 {
-    height: 15px;
+    height: 12px;
     border: none;
-    margin: 0px;
+    margin-top: 30px;
     padding: 0px;
-    width: 100%;
+    width: 80%;
 }
 .login hr.hr20 {
     height: 20px;
